<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>se.uu.it</groupId>
	<artifactId>dtls-fuzzer</artifactId>
	<version>0.1-SNAPSHOT</version>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.learnlib</groupId>
				<artifactId>learnlib-parent</artifactId>
				<version>${learnlib.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<learnlib.version>0.16.0</learnlib.version>
		<automatalib.version>0.10.0</automatalib.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>de.rub.nds.tlsattacker</groupId>
			<artifactId>TLS-Core</artifactId>
			<version>3.8.1</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>de.learnlib.distribution</groupId>
			<artifactId>learnlib-distribution</artifactId>
			<type>pom</type>
		</dependency>
	</dependencies>
	
	<build>
	    <finalName>dtls-fuzzer</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>se.uu.it.dtlsfuzzer.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
                  <!--  uncomment in case to make a jar with dependencies on calling 'mvn install'  -->   
                  <!--  <executions>
                        <execution>
                            <id>make-assembly</id> 
                            <phase>package</phase> 
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution> 
                    </executions> -->
                	</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			 <!-- Format the source code (using spotless) -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.36.0</version>
				<configuration>
					<java>
						<endWithNewline />
						<trimTrailingWhitespace />
						<importOrder />
						<removeUnusedImports />
						<!-- <palantirJavaFormat /> -->
					</java>
				</configuration>
			</plugin>
			<!-- Static code analysis -->
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.7.3.4</version>
				<configuration>
					<threshold>High</threshold>
					<!-- <visitors>FindDeadLocalStores,UnreadFields</visitors> -->
				</configuration>
			</plugin>
			<!-- Build a JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>se.uu.it.dtlsfuzzer.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
